Add `DocumentId` abstraction, convert to String before storing in DB (#59)